# codepilot

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  PLAN.md  README.md
src/: formatter.rs  lib.rs  main.rs  orchestrator.rs  runs.rs
src/agents/: github.rs  linear.rs  mod.rs  supabase.rs
src/cli/: app.rs  mod.rs  persistence.rs  state.rs  ui.rs
src/clients/: github.rs  linear.rs  mod.rs  supabase.rs
src/config/: config.rs  mod.rs
