[package]
name = "codepilot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.29"
ratatui = "0.29"
regex = "1.10"
async-openai = { version = "0.41.1", features = ["chat-completion"] }
